<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txtKode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTittle"
        android:text="@string/kode"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editKode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtKode"
        android:hint="@string/inkode" />

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editKode"
        android:text="@string/nama"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNama"
        android:hint="@string/innama"/>

    <TextView
        android:id="@+id/txtJenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNama"
        android:layout_marginTop="10dp"
        android:text="@string/jenis"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/rgJenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtJenis"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:showDividers="beginning|middle|end"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/rbKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbKodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kodi"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbSachet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saset"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbLusin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lusin"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtMetode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/rgJenis"
        android:text="@string/metode"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spMetode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtMetode"
        android:layout_below="@id/rgJenis"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="20dp"
        android:entries="@array/cara"
        />

    <TextView
        android:id="@+id/txtHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMetode"
        android:layout_marginTop="10dp"
        android:text="@string/harga"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHarga"
        android:hint="@string/inharga" />

    <TextView
        android:id="@+id/txtJum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editHarga"
        android:layout_marginTop="10dp"
        android:text="@string/jumlah"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editJum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtJum"
        android:hint="@string/injum" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editJum"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSub"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/next"
        android:textStyle="bold"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/txtCek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnNext"
        android:layout_marginTop="10dp"
        android:text="@string/cek"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
</ScrollView>